--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       backend:
     ports:
       - "5438:5432"
-  app:
+  client:
     build:
       context: .
       dockerfile: Dockerfile
@@ -23,10 +23,19 @@ services:
     networks:
       backend:
         aliases:
-          - "app"
+          - "report"
     ports:
       - "8080:8080"
+  gateway:
+    image: gateway/gateway
+    ports:
 
+      - "8082:8082"
+
+    networks:
+      backend:
+        aliases:
+          - "gateway"
 
 networks:
   backend:
